--- a/tests/tests.html
+++ b/tests/tests.html
@@ -18,8 +18,8 @@
   // Below is a set of sample element test suites. 
   // Replace these with your own suites of tests.
 
-  htmlSuite('th-spectrum-chart', function() {
-    htmlTest('th-spectrum-chart-basic.html');
+  htmlSuite('lens-viz-spectrum-chart', function() {
+    htmlTest('lens-viz-spectrum-chart-basic.html');
   });
 
   // End sample test suites
