--- a/metadata.html
+++ b/metadata.html
@@ -1,5 +1,5 @@
-<x-meta id="th-spectrum-chart" label="Thelma spectrum chart" group="Thelma chart">			<template>			<th-spectrum-chart animateOnInit="true"/></template>
-			<template id="imports">			<link rel="import" href="th-spectrum-chart.html"/></template>
+<x-meta id="lens-viz-spectrum-chart" label="Lenses spectrum chart" group="Lenses  chart">			<template>			<lens-viz-spectrum-chart animateOnInit="true"/></template>
+			<template id="imports">			<link rel="import" href="lens-viz-spectrum-chart.html"/></template>
 			<property name="chartWidth" kind="number"/>
 			<property name="chartHeight" kind="number"/>
 			<property name="chartData" kind="json"/>
