--- a/tests/lens-viz-spectrum-chart-basic.html
+++ b/tests/lens-viz-spectrum-chart-basic.html
@@ -1,33 +1,33 @@
 <!--
     @license
-    Copyright (c) 2014 Thelma Project Authors. All rights reserved.
-    This code may only be used under the MIT license found at http://thelmanews.github.io/LICENSE.txt
-    The complete set of authors may be found at http://thelmanews.github.io//AUTHORS.txt
-    The complete set of contributors may be found at http://thelmanews.github.io/CONTRIBUTORS.txt
+    Copyright (c) 2014 Lenses Project Authors. All rights reserved.
+    This code may only be used under the MIT license found at http://lenses.github.io/LICENSE.txt
+    The complete set of authors may be found at http://lenses.github.io//AUTHORS.txt
+    The complete set of contributors may be found at http://lenses.github.io/CONTRIBUTORS.txt
 -->
 <!doctype html>
 <html>
 <head>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>th-spectrum-chart</title>
+  <title>lens-viz-spectrum-chart</title>
 
   <script src="../../webcomponentsjs/webcomponents.js"></script>
   <link rel="import" href="../../polymer-test-tools/tools.html">
   <script src="../../polymer-test-tools/htmltest.js"></script>
   
   <!-- Step 1: import the element to test -->
-  <link rel="import" href="../th-spectrum-chart.html">
+  <link rel="import" href="../lens-viz-spectrum-chart.html">
 
 </head>
 <body>
 
-  <th-spectrum-chart></th-spectrum-chart>
+  <lens-viz-spectrum-chart></lens-viz-spectrum-chart>
 
   <script>
 
     document.addEventListener('polymer-ready', function() {
       // Test a property
-      var myEl = document.querySelector('th-spectrum-chart');
+      var myEl = document.querySelector('lens-viz-spectrum-chart');
 
       myEl.addEventListener('th-ready', function(event) {
         done(); 
